welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    gauche()
          ^SlugTracking:11: error: type mismatch;
 found   : Unit
 required: Boolean
      recule()
            ^SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^