welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var couleurSol = false
	if (estFaceMur == true) {
    gauche()
  }
  else {
    avance()
    if (getCouleurSol == Color.green) {
      couleurSol = true
      recule()
    }
    else {
      gauche()
    }
  }
}